working variant, for setup with netlify.

--- a/src/templates/index.njk
+++ b/src/templates/index.njk
@@ -6,6 +6,8 @@
     <body>
         {% include "./components/header.njk" %}
 
+        {{ content | safe }}
+
         <script src="/assets/js/main.js"></script>
     </body>
 </html>
