--- a/src/templates/index.njk
+++ b/src/templates/index.njk
@@ -3,10 +3,12 @@
         <title>{{title}}</title>
         <link rel="stylesheet" href="/assets/css/styles.css">
     </head>
-    <body>
+    <body class="green">
         {% include "./components/header.njk" %}
 
-        {{ content | safe }}
+        <main>
+            {{ content | safe }}
+        </main>
 
         <script src="/assets/js/main.js"></script>
     </body>
