--- a/src/templates/index.njk
+++ b/src/templates/index.njk
@@ -1,7 +1,7 @@
 <html>
     <head>
         <title>{{title}}</title>
-        <link rel="stylesheet" href="/assets/css/styles.css">
+        <link href="/assets/css/styles.css" rel="stylesheet">
     </head>
     <body class="green">
         {% include "./components/header.njk" %}
