--- a/src/templates/index.njk
+++ b/src/templates/index.njk
@@ -3,7 +3,7 @@
         <title>{{title}}</title>
         <link href="/assets/css/styles.css" rel="stylesheet">
     </head>
-    <body class="green">
+    <body>
         {% include "./components/header.njk" %}
 
         <main>
